--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ extra:
 
   header: >-
     <img src="../images/formats.png" width="100" align="right"/>
+    ![img](../images/formats.png)
 
     ---
 
