--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
     - xml: 'fileFormats/xml.md'
 
 markdown_extensions:
+  - attr_list
   - admonition
   - codehilite:
       guess_lang: false
