--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ theme:
   development: true
   development_label: under development
   production_link: https://dans.knaw.nl/en/deposit/information-about-depositing-data/before-depositing/file-formats?set_language=en
+  feature:
+    tabs: true
 
 strict: false
 
@@ -53,78 +55,7 @@ nav:
     - Spreadsheet: 'dataTypes/spreadsheet.md'
     - Text (formatted): 'dataTypes/textFormatted.md'
     - Text (plain): 'dataTypes/textPlain.md'
-  - File Formats (by data type):
-    - Data (container):
-      - JSON: 'fileFormats/json.md'
-      - SQL: 'fileFormats/sql.md'
-      - TAR: 'fileFormats/tar.md'
-      - XML: 'fileFormats/xml.md'
-      - YAML: 'fileFormats/yaml.md'
-    - Database:
-      - Access: 'fileFormats/access.md'
-      - CSV: 'fileFormats/csv.md'
-      - dbase: 'fileFormats/dbase.md'
-      - HDF5: 'fileFormats/hdf5.md'
-      - SIARD: 'fileFormats/siard.md'
-      - SQL: 'fileFormats/sql.md'
-      - XML: 'fileFormats/xml.md'
-    - Font:
-      - WOFF: 'fileFormats/woff.md'
-      - WOFF2: 'fileFormats/woff2.md'
-    - Image:
-      - GIF: 'fileFormats/gif.md'
-      - JPEG: 'fileFormats/jpeg.md'
-      - PDF: 'fileFormats/pdf.md'
-      - PDF/A: 'fileFormats/pdfa.md'
-      - PNG: 'fileFormats/png.md'
-      - PostScript: 'fileFormats/postscript.md'
-      - SVG: 'fileFormats/svg.md'
-      - TIFF: 'fileFormats/tiff.md'
-    - Markup:
-      - CSS: 'fileFormats/css.md'
-      - HTML: 'fileFormats/html.md'
-      - JavaScript: 'fileFormats/javascript.md'
-      - JSX: 'fileFormats/jsx.md'
-      - Markdown: 'fileFormats/markdown.md'
-      - SGML: 'fileFormats/sgml.md'
-      - TeX: 'fileFormats/tex.md'
-      - XHTML: 'fileFormats/xhtml.md'
-      - XML: 'fileFormats/xml.md'
-      - XSLT: 'fileFormats/xslt.md'
-    - Program code:
-      - C: 'fileFormats/c.md'
-      - CPP: 'fileFormats/cpp.md'
-      - JAVA: 'fileFormats/java.md'
-      - JavaScript: 'fileFormats/javascript.md'
-      - JSX: 'fileFormats/jsx.md'
-      - Pascal: 'fileFormats/pascal.md'
-      - Perl: 'fileFormats/perl.md'
-      - Prolog: 'fileFormats/prolog.md'
-      - Python: 'fileFormats/python.md'
-      - Ruby: 'fileFormats/ruby.md'
-      - Scala: 'fileFormats/scala.md'
-      - XSLT: 'fileFormats/xslt.md'
-    - Spreadsheet:
-      - ODS: 'fileFormats/ods.md'
-      - XLS: 'fileFormats/xls.md'
-      - XLSX: 'fileFormats/xlsx.md'
-    - Text (formatted):
-      - DOC: 'fileFormats/doc.md'
-      - DOCX: 'fileFormats/docx.md'
-      - ODT: 'fileFormats/odt.md'
-      - PDF/A: 'fileFormats/pdfa.md'
-    - Text (plain):
-      - CSS: 'fileFormats/css.md'
-      - CSV: 'fileFormats/csv.md'
-      - HTML: 'fileFormats/html.md'
-      - JSON: 'fileFormats/json.md'
-      - Markdown: 'fileFormats/markdown.md'
-      - SQL: 'fileFormats/sql.md'
-      - TeX: 'fileFormats/tex.md'
-      - Text: 'fileFormats/text.md'
-      - XML: 'fileFormats/xml.md'
-      - YAML: 'fileFormats/yaml.md'
-  - File Formats (A-Z):
+  - File Formats:
     - Access: 'fileFormats/access.md'
     - C: 'fileFormats/c.md'
     - CPP: 'fileFormats/cpp.md'
